# crestron-cli

./: .gitignore  AGENTS.md  README.md  SPEC-home-state-integration.md  crestron-cli  crestron-cli-design.md  crestron-cli-requirements.md  crestron-cli.py  pyproject.toml  state.example.yaml
crestron_cli/: api.py  config.py  main.py  state.py  utils.py
tests/: test_audio_service_terminology.py  test_utils_conversion.py
